--- a/index.html
+++ b/index.html
@@ -39,113 +39,16 @@
 	<script src="jquery-1.11.1.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="jquery-ui.js" type="text/javascript" charset="utf-8"></script>
 	<script src="paper.js" type="text/javascript" charset="utf-8"></script>
+	<script src="circles.js" type="text/javascript" charset="utf-8"></script>
 	<!--<script src="../circles.js" type="text/javascript" charset="utf-8"></script>-->
-
-	<script type="text/javascript">
-
-		//Setup variables
-		var n = 9;	
-		//var n = ( $( "#slider" ).slider( "value" ) );
-
-		//Functions
-		function circles01() {
-			// Set up canvas and paper.js project
-			var canvas = document.getElementById("canvas01"); 
-			paper.setup(canvas);
-
-			// Declare input variables
-			viewportHeight = $(window).height()
-			viewportWidth = $(window).width()
-
-			var h1 = viewportHeight*0.9;
-			var w1 = 0.7072*h1;
-			//var h2 = 0.618*h1;
-			var h2 = 0.4*h1;
-			var w2 = h2;
-
-			var hInt = h2/n;
-			var wInt = hInt;
-
-			var radius = (0.618*hInt)/2;
-
-			var testData = []
-
-			// Adjust canvas size to window size and centre it
-			canvas.height = h1;
-			canvas.width = w1;
-			canvas.style.position = "absolute";
-			canvas.setAttribute("width", w1);
-			canvas.setAttribute("height", h1);
-			canvas.style.top = (viewportHeight - h1) / 2 + "px";
-			canvas.style.left = (viewportWidth - w1) / 2 + "px";
-
-			// Create centroid point coordinates
-			var centroidsArray = []
-			for (var i = 0; i <= n; i++) {
-				for (var j = 0; j <= n; j++) {
-					var centroid = new paper.Point({});
-					centroid.x = ((w1-w2)/2)+wInt*i;
-					centroid.y = ((h1-h2)/2)+hInt*j;
-					centroidsArray.push(centroid);
-				}
-			};
-
-			// Draw circles from point coordinates and radius
-			for (var i = 0; i < centroidsArray.length; i++) {
-			//for (var i = 0; i < 5; i++) {
-				var centroid = centroidsArray[i]
-				var circle = []
-				circle = new paper.Path.Circle(new paper.Point(centroid.x, centroid.y), radius);
-				circle.fillColor = "black";
-				//testData.push("/",centroid.x,centroid.y);
-				//newCircles = (new paper.Path.Circle(new paper.Point(centroid.x, centroid.y), circleRadius));
-			};
-
-			paper.view.draw();
-
-			document.getElementById("test").innerText=n;
-
-			//newCircles.fillColor = "black";
-
-		};
-
-		//Setup SVG Canvas
-		$(document).ready(function() {
-			circles01();
-		});
-
-		//Resize canvas to match window size
-		$(window).resize(function() {
-			circles01();
-		});
-
-		
-
-
-		$(function() {
-	    $( "#slider" ).slider({
-			value: 5,
-			min: 1,
-			max: 50,
-			step: 1,
-			change: function( event, ui ) {
-				circles01();
-			}
-	    });
-	    //var n = val( $( "#slider" ).slider( "value" ) );
-	    //$( "#amount" ).val( $( "#slider" ).slider( "value" ) );
-	  	});
-		//Data
-
-
-
-	</script>
 
 </head>
 <body>
 	<div id="test"></div>
-	<canvas id="canvas01"></canvas>
-	<div id="slider"></div>
+	<div class="container">
+		<canvas id="canvas01"></canvas>
+		<div id="slider"></div>
+	</div>
 
 </body>
 </html>
