Cleaned up method to define canvas size

--- a/index.html
+++ b/index.html
@@ -40,15 +40,19 @@
 	<script src="jquery-ui.js" type="text/javascript" charset="utf-8"></script>
 	<script src="paper.js" type="text/javascript" charset="utf-8"></script>
 	<script src="circles.js" type="text/javascript" charset="utf-8"></script>
-	<!--<script src="../circles.js" type="text/javascript" charset="utf-8"></script>-->
 
 </head>
 <body>
 	<div id="test"></div>
 	<div class="container">
-		<canvas id="canvas01"></canvas>
-		<div id="slider"></div>
+		<div class="ten columns offset-by-three">
+			<canvas id="canvas01"></canvas>
+		</div>
+		<div class ="six columns offset-by-five">
+			<div id="slider"></div>
+		</div>
 	</div>
+
 
 </body>
 </html>
