--- a/index.html
+++ b/index.html
@@ -44,12 +44,15 @@
 </head>
 <body>
 	<div id="test"></div>
-	<div class="container">
-		<div class="ten columns offset-by-three">
-			<canvas id="canvas01"></canvas>
-		</div>
-		<div class ="six columns offset-by-five">
-			<div id="slider"></div>
+	<canvas id="canvas01"></canvas>
+	<div class="ui">
+		<div class="container">
+			<div class="sixteen columns">
+				
+			</div>
+			<div class ="six columns offset-by-five ">
+				<div id="slider"></div>
+			</div>
 		</div>
 	</div>
 
