Cleaned up dynamic grid width
Still need to get grid height to adjust and reposition dynamically

--- a/index.html
+++ b/index.html
@@ -45,11 +45,8 @@
 <body>
 	<div id="test"></div>
 	<canvas id="canvas01"></canvas>
-	<div class="ui">
-		<div class="container">
-			<div class="sixteen columns">
-				
-			</div>
+	<div class="container">
+		<div class="sixteen columns ui">
 			<div class ="six columns offset-by-five ">
 				<div id="slider"></div>
 			</div>
