--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 	<script src="jquery-1.11.1.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="jquery-ui.js" type="text/javascript" charset="utf-8"></script>
 	<script src="paper.js" type="text/javascript" charset="utf-8"></script>
+	<script src="raphael.js" type="text/javascript" charset="utf-8"></script>
 	<script src="circles.js" type="text/javascript" charset="utf-8"></script>
 
 </head>
