Similar implementation using Raphael.js
Performance Issues.. perhaps working with paper.js is better.

--- a/index.html
+++ b/index.html
@@ -38,14 +38,13 @@
 
 	<script src="jquery-1.11.1.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="jquery-ui.js" type="text/javascript" charset="utf-8"></script>
-	<script src="paper.js" type="text/javascript" charset="utf-8"></script>
 	<script src="raphael.js" type="text/javascript" charset="utf-8"></script>
 	<script src="circles.js" type="text/javascript" charset="utf-8"></script>
 
 </head>
 <body>
 	<div id="test"></div>
-	<canvas id="canvas01"></canvas>
+	<div id="canvas01"></div>
 	<div class="container">
 		<div class="sixteen columns ui">
 			<div class ="six columns offset-by-five ">
