--- a/index.html
+++ b/index.html
@@ -38,13 +38,14 @@
 
 	<script src="jquery-1.11.1.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="jquery-ui.js" type="text/javascript" charset="utf-8"></script>
+	<script src="paper.js" type="text/javascript" charset="utf-8"></script>
 	<script src="raphael.js" type="text/javascript" charset="utf-8"></script>
 	<script src="circles.js" type="text/javascript" charset="utf-8"></script>
 
 </head>
 <body>
 	<div id="test"></div>
-	<div id="canvas01"></div>
+	<canvas id="canvas01"></canvas>
 	<div class="container">
 		<div class="sixteen columns ui">
 			<div class ="six columns offset-by-five ">
