--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 	<div id="test"></div>
 	<canvas id="canvas01"></canvas>
 	<div class="container">
-		<div class="sixteen columns ui">
+		<!--<div class="sixteen columns ui">
 			<div class ="six columns offset-by-five ">
 				<div id="slider"></div>
 			</div>
-		</div>
+		</div>-->
 	</div>
 
 
