Random path automata finally works

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 </head>
 <body>
 	<div id="test"></div>
+	<div id="test2"></div>
+	<div id="test3"></div>
 	<canvas id="canvas01"></canvas>
 	<div class="container">
 		<!--<div class="sixteen columns ui">
