--- a/index.html
+++ b/index.html
@@ -45,41 +45,31 @@
 	
 	
 	<div class="container">
-		<div class="row margin-bottom-30px">
-			<div class="col-md-3">
-			</div>
-			<div class="col-md-6 header"><img class="logo" src="img/logo.svg"><div id="test"></div><div id="test2"></div><div id="test3"></div></div>
+		<div class="row margin-bottom-50px">
+			<div class="col-md-3 header"><img class="logo" src="img/logo.svg"><div id="test"></div><div id="test2"></div><div id="test3"></div></div>
+			<div class="col-md-2"></div>
 		</div>
-		<div class="row margin-bottom-30px">
-			<div class="col-md-3">
+		<div class="row margin-bottom-50px">
+			<div>
+				<div class="col-xs-2 col-md-4">
+					<div class="margin-bottom-50px"></div>
+					<img src="img/icon_clr.svg" id="clr" class="circleDiv">
+					<img src="img/icon_inv.svg" id="inv" class="circleDiv">
+					<img src="img/icon_rnd.svg" id="rnd" class="circleDiv">
+					<img src="img/icon_bnd.svg" id="bdr" class="circleDiv">
+				</div>
 			</div>
-			<div class="col-md-6">
+			
+			<div class="col-md-1"></div>		
+			<div class="col-md-5">
 				<div class="canvascontainer">
 					<canvas id="canvas01"></canvas>
 				</div>
 			</div>
-			<div class="col-md-1">
-			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-2 col-md-4">
-			</div>
-			<div class="col-xs-2 col-md-1">
-				<div><img src="img/icon_clr.svg" id="clr" class="circleDiv"></div>
-			</div>
-			<div class="col-xs-2 col-md-1">
-				<div><img src="img/icon_inv.svg" id="inv" class="circleDiv"></div>
-			</div>
-			<div class="col-xs-2 col-md-1">
-				<div><img src="img/icon_rnd.svg" id="rnd" class="circleDiv"></div>
-			</div>
-			<div class="col-xs-2 col-md-1">
-				<div><img src="img/icon_bnd.svg" id="bdr" class="circleDiv"></div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-5 footer">
-
+			<div class="col-md-12 footer">
+			<p>This is copyright information woop</p>
 			</div>
 		</div>
 	</div>
