--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
 	
 	<div class="container">
 		<div class="row margin-bottom-50px">
-			<div class="col-md-3 header"><img class="logo" src="img/logo.svg"><div id="test"></div><div id="test2"></div><div id="test3"></div></div>
+			<div class="col-xs-3 col-md-3 header"><img class="logo" src="img/logo.svg"><div id="test"></div><div id="test2"></div><div id="test3"></div></div>
 			<div class="col-md-2"></div>
 		</div>
 		<div class="row margin-bottom-50px">
 			<div>
-				<div class="col-xs-2 col-md-4">
+				<div class="col-xs-4 col-md-4">
 					<div class="margin-bottom-50px"></div>
 					<img src="img/icon_clr.svg" id="clr" class="circleDiv">
 					<img src="img/icon_inv.svg" id="inv" class="circleDiv">
@@ -61,7 +61,7 @@
 			</div>
 			
 			<div class="col-md-1"></div>		
-			<div class="col-md-5">
+			<div class="col-xs-5 col-md-5">
 				<div class="canvascontainer">
 					<canvas id="canvas01"></canvas>
 				</div>
