--- a/index.html
+++ b/index.html
@@ -45,23 +45,22 @@
 	
 	
 	<div class="container">
-		<div class="row margin-bottom-50px">
-			<div class="col-xs-3 col-md-3 header"><img class="logo" src="img/logo.svg"><div id="test"></div><div id="test2"></div><div id="test3"></div></div>
+		<div class="row margin-bottom-30px">
+			<div class="col-xs-3 col-md-2 header"><img class="logo" src="img/logo.svg"><div id="test"></div><div id="test2"></div><div id="test3"></div></div>
 			<div class="col-md-2"></div>
 		</div>
-		<div class="row margin-bottom-50px">
+		<div class="row">
 			<div>
-				<div class="col-xs-5 col-md-4">
-					<div class="margin-bottom-50px"></div>
+				<div class="col-xs-3 col-md-2">
+					<div class=""></div>
 					<div><img src="img/icon_clr.svg" id="clr" class="circleDiv"></div>
 					<div><img src="img/icon_inv.svg" id="inv" class="circleDiv"></div>
 					<div><img src="img/icon_rnd.svg" id="rnd" class="circleDiv"></div>
 					<div><img src="img/icon_bnd.svg" id="bdr" class="circleDiv"></div>
 				</div>
 			</div>
-			
-			<div class="col-md-1"></div>		
-			<div class="col-xs-6 col-md-5">
+				
+			<div class="col-xs-8 col-md-5">
 				<div class="canvascontainer">
 					<canvas id="canvas01"></canvas>
 				</div>
