Updated for mobile

--- a/index.html
+++ b/index.html
@@ -46,23 +46,32 @@
 	
 	<div class="container">
 		<div class="row margin-bottom-30px">
+			<div class="margin-bottom-10px"></div>
 			<div class="col-xs-3 col-md-2 header"><img class="logo" src="img/logo.svg"><div id="test"></div><div id="test2"></div><div id="test3"></div></div>
 			<div class="col-md-2"></div>
 		</div>
 		<div class="row">
-			<div>
-				<div class="col-xs-3 col-md-1">
-					<div class=""></div>
-					<div><img src="img/icon_clr.svg" id="clr" class="circleDiv"></div>
-					<div><img src="img/icon_inv.svg" id="inv" class="circleDiv"></div>
-					<div><img src="img/icon_rnd.svg" id="rnd" class="circleDiv"></div>
-					<div><img src="img/icon_bnd.svg" id="bdr" class="circleDiv"></div>
-				</div>
-			</div>
-				
-			<div class="col-xs-9 col-md-5">
+			<div class="col-xs-2 col-md-3"></div>
+			<div class="col-xs-8 col-md-6">
 				<div class="canvascontainer">
 					<canvas id="canvas01"></canvas>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div>
+				<div class="col-xs-2 col-md-4"></div>
+				<div class="col-xs-2 col-md-1">
+					<div><img src="img/icon_clr.svg" id="clr" class="circleDiv"></div>
+				</div>
+				<div class="col-xs-2 col-md-1">
+					<div><img src="img/icon_inv.svg" id="inv" class="circleDiv"></div>
+				</div>
+				<div class="col-xs-2 col-md-1">
+					<div><img src="img/icon_rnd.svg" id="rnd" class="circleDiv"></div>
+				</div>
+				<div class="col-xs-2 col-md-1">
+					<div><img src="img/icon_bnd.svg" id="bdr" class="circleDiv"></div>
 				</div>
 			</div>
 		</div>
