--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 			<div class="col-md-2"></div>
 		</div>
 		<div class="row">
-			<div class="col-xs-2 col-md-3"></div>
-			<div class="col-xs-8 col-md-6">
+			<div class="col-xs-1 col-md-3"></div>
+			<div class="col-xs-10 col-md-6">
 				<div class="canvascontainer">
 					<canvas id="canvas01"></canvas>
 				</div>
@@ -60,17 +60,17 @@
 		</div>
 		<div class="row">
 			<div>
-				<div class="col-xs-2 col-md-4"></div>
-				<div class="col-xs-2 col-md-1">
+				<div class="col-md-4"></div>
+				<div class="col-xs-3 col-md-1">
 					<div><img src="img/icon_clr.svg" id="clr" class="circleDiv"></div>
 				</div>
-				<div class="col-xs-2 col-md-1">
+				<div class="col-xs-3 col-md-1">
 					<div><img src="img/icon_inv.svg" id="inv" class="circleDiv"></div>
 				</div>
-				<div class="col-xs-2 col-md-1">
+				<div class="col-xs-3 col-md-1">
 					<div><img src="img/icon_rnd.svg" id="rnd" class="circleDiv"></div>
 				</div>
-				<div class="col-xs-2 col-md-1">
+				<div class="col-xs-3 col-md-1">
 					<div><img src="img/icon_bnd.svg" id="bdr" class="circleDiv"></div>
 				</div>
 			</div>
