--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	<link rel="stylesheet" href="jquery-ui.css">
 	<link rel="stylesheet" href="custom.css">
 
+
 	<!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
@@ -38,6 +39,7 @@
 	<script src="jquery-ui.js" type="text/javascript" charset="utf-8"></script>
 	<script src="paper.js" type="text/javascript" charset="utf-8"></script>
 	<script src="jquery.knob.js" type="text/javascript" charset="utf-8"></script>
+	<script src="customKnob.js" type="text/javascript" charset="utf-8"></script>
 	<script src="circles.js" type="text/javascript" charset="utf-8"></script>
 
 </head>
@@ -61,17 +63,20 @@
 		<div class="row">
 			<div>
 				<div class="col-md-4"></div>
-				<div class="col-xs-2 col-md-1">
+				<div class="col-xs-3 col-md-1">
 					<div><img src="img/icon_clr.svg" id="clr" class="circleDiv"></div>
 				</div>
-				<div class="col-xs-2 col-md-1">
+				<div class="col-xs-3 col-md-1">
 					<div><img src="img/icon_inv.svg" id="inv" class="circleDiv"></div>
 				</div>
-				<div class="col-xs-2 col-md-1">
+				<div class="col-xs-3 col-md-1">
 					<div><img src="img/icon_rnd.svg" id="rnd" class="circleDiv"></div>
 				</div>
-				<div class="col-xs-2 col-md-1">
+				<div class="col-xs-3 col-md-1">
 					<div><img src="img/icon_bnd.svg" id="bdr" class="circleDiv"></div>
+				</div>
+				<div class="col-xs-3 col-md-1">
+					<div class="knobcontainer"><canvas class="knob"></canvas></div>
 				</div>
 			</div>
 		</div>
