Updated slider work

--- a/index.html
+++ b/index.html
@@ -83,11 +83,12 @@
                     </div>
                     <div class="col-xs-12 col-md-12">
                         <h4>GRID DENSITY</h4>
-                        <div id="slider_count"></div>
+                        <div class="slider" id="slider_count"></div>
                     </div>
                      <div class="col-xs-12 col-md-12">
                         <h4>COLOUR</h4>
-                         <div id="slider_hue"></div>
+                         <div class="slider" id="slider_hue"></div>
+                         <div class="slider" id="slider_sat"></div>
                     </div>
                 </div>
             </div>
