--- a/index.html
+++ b/index.html
@@ -85,7 +85,11 @@
                         <h4>GRID DENSITY</h4>
                         <div class="slider" id="slider_count"></div>
                     </div>
-                     <div class="col-xs-12 col-md-12">
+                    <!--<div class="col-xs-12 col-md-12">
+                        <h4>CIRCLE RADIUS</h4>
+                        <div class="slider" id="slider_rad"></div>
+                    </div>-->
+                    <div class="col-xs-12 col-md-12">
                         <h4>COLOUR</h4>
                          <div class="slider" id="slider_hue"></div>
                          <div class="slider" id="slider_sat"></div>
