First implementation of pattern save
Pattern saved as a binary string, next step to compress to an integer
or hexadecimal or otherwise.

--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
                          <div class="slider" id="slider_hue"></div>
                          <div class="slider" id="slider_sat"></div>
                     </div>
+                    <div class="col-xs-12 col-md-12">
+                        <h4>CODE</h4>
+                        <p id="patternCode"></p>
+                    </div>
                 </div>
             </div>
 
