--- a/index.html
+++ b/index.html
@@ -94,9 +94,15 @@
                          <div class="slider" id="slider_hue"></div>
                          <div class="slider" id="slider_sat"></div>
                     </div>
-                    <div class="col-xs-4 col-md-4">
+                   <!-- <div class="col-xs-12 col-md-12">
                         <h4>CODE</h4>
                         <p id="patternCode"></p>
+                    </div>-->
+                    <div class="col-xs-12 col-md-12">
+                        <h4>PREVIEW + ORDER</h4>
+                    </div>
+                    <div class="col-xs-3 col-md-3">
+                        <div><img src="img/icon_bnd.svg" id="prev" class="circleDiv"></div>
                     </div>
                 </div>
             </div>
