--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
                     <div class="col-xs-3 col-md-3">
                         <div><img src="img/icon_bnd.svg" id="bdr" class="circleDiv"></div>
                     </div>
+                    <div class="col-xs-3 col-md-3 col-md-offset-3">
+                        <div><img src="img/placeholder.svg" id="poster" class="circleDiv"></div>
+                    </div>
+                    <div class="col-xs-3 col-md-3">
+                        <div><img src="img/placeholder.svg" id="screen" class="circleDiv"></div>
+                    </div>
                     <div class="col-xs-12 col-md-12">
                         <h4>GRID DENSITY</h4>
                         <div class="slider" id="slider_count"></div>
@@ -102,7 +108,7 @@
                         <h4>PREVIEW + ORDER</h4>
                     </div>
                     <div class="col-xs-3 col-md-3">
-                        <div><img src="img/icon_bnd.svg" id="prev" class="circleDiv"></div>
+                        <div><img src="img/placeholder.svg" id="prev" class="circleDiv"></div>
                     </div>
                 </div>
             </div>
